@@ -1,8 +1,5 @@
 <?php
 
-require_once dirname(__FILE__) . DIRECTORY_SEPARATOR . 'include' . DIRECTORY_SEPARATOR . 'bittorrent.php';
-require_once INCL_DIR . 'user_functions.php';
-check_user_status();
 
 /**
  * @return mixed|string
